@@ -1,1 +1,1 @@
-cascading.release.version=0.6.0
+cascading.release.version=0.6.1
